unpackaged/main/default/objects/FS_Pledge_Installments__c/FS_Pledge_Installments__c.object-meta.xml
<CustomObject>
    <description>Custom object to track fellows pledge installmets</description>
    <label>Pledge Installments</label>
    <nameField>
        <displayFormat>PID {000000}</displayFormat>
        <label>Pledge Installment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pledge Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>