unpackaged/main/default/objects/FS_Pledge_Installments__c/fields/FS_Balance__c.field-meta.xml
<CustomField>
    <fullName>FS_Balance__c</fullName>
    <inlineHelpText>Balance due for installment</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>