unpackaged/main/default/objects/FS_Pledge_Installments__c/fields/FS_Charges__c.field-meta.xml
<CustomField>
    <fullName>FS_Charges__c</fullName>
    <inlineHelpText>Charge for the installment</inlineHelpText>
    <label>Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>