unpackaged/main/default/objects/FS_Pledge_Installments__c/fields/FS_Credits__c.field-meta.xml
<CustomField>
    <fullName>FS_Credits__c</fullName>
    <inlineHelpText>Credit amount for the installment</inlineHelpText>
    <label>Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>