unpackaged/main/default/objects/FS_Pledge_Installments__c/fields/FS_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Description__c</fullName>
    <inlineHelpText>Notes for staff</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>