unpackaged/main/default/objects/FS_Pledge_Installments__c/fields/FS_Fellow__c.field-meta.xml
<CustomField>
    <fullName>FS_Fellow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Fellow tied to the pledge installments</inlineHelpText>
    <label>Fellow</label>
    <referenceTo>FS_Fellow__c</referenceTo>
    <relationshipLabel>Pledge Installments</relationshipLabel>
    <relationshipName>Pledge_Installments</relationshipName>
    <type>Lookup</type>
</CustomField>