unpackaged/main/default/objects/FS_Pledge_Installments__c/fields/FS_Installment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Installment_Due_Date__c</fullName>
    <inlineHelpText>Due date for pledge payment</inlineHelpText>
    <label>Installment Due Date</label>
    <type>Date</type>
</CustomField>